--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div class="content">
     <h1>Keval's Photography</h1>
     <div class="buttons">
-      <a href="gallery.html" class="btn">View Gallery</a>
+      <a href="/gallery/" class="btn">View Gallery</a>
       <a href="https://www.instagram.com/keval.kotadia" class="btn" target="_blank">Follow on Instagram</a>
     </div>
   </div>
