--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Keval's Gallery</title>
-  <link rel="icon" href="images/favicon.png" type="image/png"/>
+  <link rel="icon" href="..images/favicon.png" type="image/png"/>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('images/background.jpg') no-repeat center center fixed;
+      background: url('..images/background.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
       position: relative;
@@ -171,23 +171,23 @@
 
 <section class="gallery">
   <!-- Image Blocks (17 total) -->
-  <img src="images/1.jpg" alt="Photo 1" onclick="openLightbox(0)">
-  <img src="images/2.jpg" alt="Photo 2" onclick="openLightbox(1)">
-  <img src="images/3.jpg" alt="Photo 3" onclick="openLightbox(2)">
-  <img src="images/4.jpg" alt="Photo 4" onclick="openLightbox(3)">
-  <img src="images/5.jpg" alt="Photo 5" onclick="openLightbox(4)">
-  <img src="images/6.jpg" alt="Photo 6" onclick="openLightbox(5)">
-  <img src="images/7.jpg" alt="Photo 7" onclick="openLightbox(6)">
-  <img src="images/8.jpg" alt="Photo 8" onclick="openLightbox(7)">
-  <img src="images/9.jpg" alt="Photo 9" onclick="openLightbox(8)">
-  <img src="images/10.jpg" alt="Photo 10" onclick="openLightbox(9)">
-  <img src="images/11.jpg" alt="Photo 11" onclick="openLightbox(10)">
-  <img src="images/12.jpg" alt="Photo 12" onclick="openLightbox(11)">
-  <img src="images/13.jpg" alt="Photo 13" onclick="openLightbox(12)">
-  <img src="images/14.jpg" alt="Photo 14" onclick="openLightbox(13)">
-  <img src="images/15.jpg" alt="Photo 15" onclick="openLightbox(14)">
-  <img src="images/16.jpg" alt="Photo 16" onclick="openLightbox(15)">
-  <img src="images/17.jpg" alt="Photo 17" onclick="openLightbox(16)">
+  <img src="..images/1.jpg" alt="Photo 1" onclick="openLightbox(0)">
+  <img src="..images/2.jpg" alt="Photo 2" onclick="openLightbox(1)">
+  <img src="..images/3.jpg" alt="Photo 3" onclick="openLightbox(2)">
+  <img src="..images/4.jpg" alt="Photo 4" onclick="openLightbox(3)">
+  <img src="..images/5.jpg" alt="Photo 5" onclick="openLightbox(4)">
+  <img src="..images/6.jpg" alt="Photo 6" onclick="openLightbox(5)">
+  <img src="..images/7.jpg" alt="Photo 7" onclick="openLightbox(6)">
+  <img src="..images/8.jpg" alt="Photo 8" onclick="openLightbox(7)">
+  <img src="..images/9.jpg" alt="Photo 9" onclick="openLightbox(8)">
+  <img src="..images/10.jpg" alt="Photo 10" onclick="openLightbox(9)">
+  <img src="..images/11.jpg" alt="Photo 11" onclick="openLightbox(10)">
+  <img src="..images/12.jpg" alt="Photo 12" onclick="openLightbox(11)">
+  <img src="..images/13.jpg" alt="Photo 13" onclick="openLightbox(12)">
+  <img src="..images/14.jpg" alt="Photo 14" onclick="openLightbox(13)">
+  <img src="..images/15.jpg" alt="Photo 15" onclick="openLightbox(14)">
+  <img src="..images/16.jpg" alt="Photo 16" onclick="openLightbox(15)">
+  <img src="..images/17.jpg" alt="Photo 17" onclick="openLightbox(16)">
 </section>
 
 <div id="lightbox">
