--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,255 +2,128 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Keval's Gallery</title>
-  <link rel="icon" href="../images/favicon.png" type="image/png"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Keval Kotadia | Gallery</title>
+  <link rel="icon" type="image/png" href="../images/favicon.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
       background: url('../images/background.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: white;
-      position: relative;
+      font-family: 'Segoe UI', sans-serif;
+      scroll-behavior: smooth;
     }
-
     .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.75);
-      z-index: -1;
+      background-color: rgba(0, 0, 0, 0.7);
+      min-height: 100vh;
+      padding-bottom: 4rem;
     }
-
-    header {
-      text-align: center;
-      padding: 2rem 1rem 1rem;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-      margin: 0;
-      text-shadow: 0 0 10px black;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 1rem;
-      flex-wrap: wrap;
-    }
-
-    .buttons a {
-      text-decoration: none;
-      background: #ffffff20;
-      padding: 0.7rem 1.2rem;
-      border: 1px solid white;
-      border-radius: 30px;
-      color: white;
-      transition: 0.3s;
-    }
-
-    .buttons a:hover {
-      background: white;
-      color: black;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-      padding: 2rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .gallery img {
-      width: 100%;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-      box-shadow: 0 0 10px #00000070;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.03);
-    }
-
-    #lightbox {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.9);
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 999;
-    }
-
-    #lightbox img {
-      max-width: 90%;
-      max-height: 80%;
-      border-radius: 10px;
-    }
-
-    .lightbox-controls {
-      margin-top: 1rem;
-      display: flex;
-      gap: 1rem;
-    }
-
-    .lightbox-controls button {
-      padding: 0.5rem 1rem;
-      background: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .lightbox-controls button:hover {
-      background: #ddd;
-    }
-
-    #watermark {
+    .watermark {
       position: fixed;
       bottom: 10px;
-      right: 10px;
+      left: 10px;
+      color: rgba(255,255,255,0.3);
       font-size: 14px;
-      opacity: 0.5;
+      z-index: 50;
     }
-
-    #backToTop {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      font-size: 1.5rem;
-      background: #ffffff20;
-      color: white;
-      padding: 10px 14px;
-      border-radius: 50%;
-      border: 1px solid white;
-      cursor: pointer;
-      display: none;
-      transition: 0.3s;
+    .fade-in {
+      animation: fadeIn 1.5s ease-in-out;
     }
-
-    #backToTop:hover {
-      background: white;
-      color: black;
-    }
-
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
+      from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    .gallery img {
-      animation: fadeIn 0.6s ease-in-out;
-    }
-
   </style>
 </head>
 <body>
+  <div class="overlay text-white">
+    <header class="text-center py-6 fade-in">
+      <h1 class="text-4xl font-bold mb-2">My Photography Gallery</h1>
+      <p class="text-lg">Capturing the world through my lens</p>
+    </header>
 
-<div class="overlay"></div>
-
-<header>
-  <h1>Keval's Photography</h1>
-  <div class="buttons">
-    <a href="/">🏠 Home</a>
-    <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">📷 Follow on Instagram</a>
-  </div>
-</header>
-
-<section class="gallery">
-  <!-- Image Blocks (17 total) -->
-  <img src="../images/1.jpg" alt="Photo 1" onclick="openLightbox(0)">
-  <img src="../images/2.jpg" alt="Photo 2" onclick="openLightbox(1)">
-  <img src="../images/3.jpg" alt="Photo 3" onclick="openLightbox(2)">
-  <img src="../images/4.jpg" alt="Photo 4" onclick="openLightbox(3)">
-  <img src="../images/5.jpg" alt="Photo 5" onclick="openLightbox(4)">
-  <img src="../images/6.jpg" alt="Photo 6" onclick="openLightbox(5)">
-  <img src="../images/7.jpg" alt="Photo 7" onclick="openLightbox(6)">
-  <img src="../images/8.jpg" alt="Photo 8" onclick="openLightbox(7)">
-  <img src="../images/9.jpg" alt="Photo 9" onclick="openLightbox(8)">
-  <img src="../images/10.jpg" alt="Photo 10" onclick="openLightbox(9)">
-  <img src="../images/11.jpg" alt="Photo 11" onclick="openLightbox(10)">
-  <img src="../images/12.jpg" alt="Photo 12" onclick="openLightbox(11)">
-  <img src="../images/13.jpg" alt="Photo 13" onclick="openLightbox(12)">
-  <img src="../images/14.jpg" alt="Photo 14" onclick="openLightbox(13)">
-  <img src="../images/15.jpg" alt="Photo 15" onclick="openLightbox(14)">
-  <img src="../images/16.jpg" alt="Photo 16" onclick="openLightbox(15)">
-  <img src="../images/17.jpg" alt="Photo 17" onclick="openLightbox(16)">
-</section>
-
-    <!-- Lightbox HTML -->
-    <div id="lightbox" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
-      <button onclick="closeLightbox()" class="absolute top-4 right-6 text-white text-4xl">&times;</button>
-      <button onclick="prevImage()" class="absolute left-4 text-white text-3xl">&#8592;</button>
-      <img id="lightboxImage" class="max-h-[90%] max-w-[90%] object-contain" src="" alt="Gallery Image">
-      <a id="downloadBtn" download class="absolute bottom-10 left-1/2 transform -translate-x-1/2 bg-white text-black px-4 py-2 rounded shadow-lg hover:bg-gray-200">Download</a>
-      <button onclick="nextImage()" class="absolute right-4 text-white text-3xl">&#8594;</button>
+    <div class="flex justify-center gap-6 mb-6 fade-in">
+      <a href="../index.html" class="bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200 transition">Home</a>
+      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" class="bg-pink-600 text-white px-4 py-2 rounded shadow hover:bg-pink-500 transition">Follow on Instagram</a>
     </div>
 
-    <!-- Scroll to top button -->
-    <button onclick="scrollToTop()" class="fixed bottom-6 right-6 bg-black bg-opacity-60 text-white px-3 py-2 rounded-full shadow-md hover:bg-opacity-90">
-      &uarr;
-    </button>
-
-    <!-- SCRIPT GOES HERE -->
-    <script>
-      let currentIndex = 1;
-
-      function openLightbox(index) {
-        currentIndex = index;
-        updateLightbox();
-        document.getElementById('lightbox').classList.remove('hidden');
-      }
-
-      function closeLightbox() {
-        document.getElementById('lightbox').classList.add('hidden');
-      }
-
-      function nextImage() {
-        currentIndex = currentIndex >= 17 ? 1 : currentIndex + 1;
-        updateLightbox();
-      }
-
-      function prevImage() {
-        currentIndex = currentIndex <= 1 ? 17 : currentIndex - 1;
-        updateLightbox();
-      }
-
-      function updateLightbox() {
-        const imgPath = '../images/' + currentIndex + '.jpg';
-        document.getElementById('lightboxImage').src = imgPath;
-        document.getElementById('downloadBtn').href = imgPath;
-      }
-
-      function scrollToTop() {
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      }
-
-      // Keyboard navigation
-      document.addEventListener('keydown', function(event) {
-        const lightboxOpen = !document.getElementById('lightbox').classList.contains('hidden');
-        if (lightboxOpen) {
-          if (event.key === 'ArrowRight') {
-            nextImage();
-          } else if (event.key === 'ArrowLeft') {
-            prevImage();
-          } else if (event.key === 'Escape') {
-            closeLightbox();
-          }
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 px-4 fade-in">
+      <!-- Image Block Start -->
+      <script>
+        for (let i = 1; i <= 17; i++) {
+          document.write(`
+            <div class="relative group cursor-pointer overflow-hidden rounded shadow-lg">
+              <img src="../images/${i}.jpg" alt="Photo ${i}" class="w-full h-64 object-cover transform group-hover:scale-105 transition duration-300" onclick="openLightbox(${i})" />
+              <div class="absolute inset-0 bg-black bg-opacity-30 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
+                <p class="text-white text-sm">Click to view</p>
+              </div>
+            </div>
+          `);
         }
-      });
-    </script>
-  </body>
+      </script>
+      <!-- Image Block End -->
+    </div>
+  </div>
+
+  <div class="watermark">© Keval Kotadia</div>
+
+  <!-- Lightbox HTML -->
+  <div id="lightbox" class="hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-50">
+    <button onclick="closeLightbox()" class="absolute top-4 right-6 text-white text-4xl">&times;</button>
+    <button onclick="prevImage()" class="absolute left-4 text-white text-3xl">&#8592;</button>
+    <img id="lightboxImage" class="max-h-[90%] max-w-[90%] object-contain shadow-2xl rounded" src="" alt="Gallery Image" />
+    <a id="downloadBtn" download class="absolute bottom-10 left-1/2 transform -translate-x-1/2 bg-white text-black px-4 py-2 rounded hover:bg-gray-300 shadow-md">Download</a>
+    <button onclick="nextImage()" class="absolute right-4 text-white text-3xl">&#8594;</button>
+  </div>
+
+  <!-- Scroll to top -->
+  <button onclick="scrollToTop()" class="fixed bottom-6 right-6 bg-black bg-opacity-60 text-white px-3 py-2 rounded-full shadow hover:bg-opacity-90">
+    &uarr;
+  </button>
+
+  <!-- Scripts -->
+  <script>
+    let currentIndex = 1;
+
+    function openLightbox(index) {
+      currentIndex = index;
+      updateLightbox();
+      document.getElementById('lightbox').classList.remove('hidden');
+    }
+
+    function closeLightbox() {
+      document.getElementById('lightbox').classList.add('hidden');
+    }
+
+    function nextImage() {
+      currentIndex = currentIndex >= 17 ? 1 : currentIndex + 1;
+      updateLightbox();
+    }
+
+    function prevImage() {
+      currentIndex = currentIndex <= 1 ? 17 : currentIndex - 1;
+      updateLightbox();
+    }
+
+    function updateLightbox() {
+      const imgPath = `../images/${currentIndex}.jpg`;
+      document.getElementById('lightboxImage').src = imgPath;
+      document.getElementById('downloadBtn').href = imgPath;
+    }
+
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    // Keyboard control
+    document.addEventListener('keydown', function(event) {
+      const open = !document.getElementById('lightbox').classList.contains('hidden');
+      if (open) {
+        if (event.key === 'ArrowRight') nextImage();
+        if (event.key === 'ArrowLeft') prevImage();
+        if (event.key === 'Escape') closeLightbox();
+      }
+    });
+  </script>
+</body>
 </html>
