--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Keval Kotadia | Gallery</title>
-  <link rel="icon" type="image/png" href="../images/favicon.png" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gallery | Keval Kotadia</title>
+  <link rel="icon" type="image/png" href="../images/favicon.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -16,7 +16,43 @@
     .overlay {
       background-color: rgba(0, 0, 0, 0.7);
       min-height: 100vh;
-      padding-bottom: 4rem;
+    }
+    .lightbox {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.9);
+      justify-content: center;
+      align-items: center;
+      z-index: 50;
+    }
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      object-fit: contain;
+    }
+    .lightbox-btn {
+      position: absolute;
+      background: rgba(255,255,255,0.2);
+      color: white;
+      font-size: 1.5rem;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+    }
+    .lightbox-close { top: 1rem; right: 1rem; }
+    .lightbox-prev { left: 1rem; top: 50%; transform: translateY(-50%); }
+    .lightbox-next { right: 1rem; top: 50%; transform: translateY(-50%); }
+    .lightbox-download {
+      bottom: 1rem;
+      left: 50%;
+      transform: translateX(-50%);
+      background: white;
+      color: black;
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      font-weight: bold;
     }
     .watermark {
       position: fixed;
@@ -26,73 +62,49 @@
       font-size: 14px;
       z-index: 50;
     }
-    .fade-in {
-      animation: fadeIn 1.5s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
   </style>
 </head>
 <body>
-  <div class="overlay text-white">
-    <header class="text-center py-6 fade-in">
-      <h1 class="text-4xl font-bold mb-2">My Photography Gallery</h1>
-      <p class="text-lg">Capturing the world through my lens</p>
-    </header>
-
-    <div class="flex justify-center gap-6 mb-6 fade-in">
-      <a href="../index.html" class="bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200 transition">Home</a>
-      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" class="bg-pink-600 text-white px-4 py-2 rounded shadow hover:bg-pink-500 transition">Follow on Instagram</a>
+  <div class="overlay text-white px-4 py-8">
+    <div class="flex justify-between items-center mb-8">
+      <a href="../" class="bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200">Home</a>
+      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" class="bg-pink-600 text-white px-4 py-2 rounded shadow hover:bg-pink-500">Follow on Instagram</a>
     </div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 px-4 fade-in">
-      <!-- Image Block Start -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+      <!-- Image blocks -->
+      <!-- Replace with 1 to 17 -->
       <script>
         for (let i = 1; i <= 17; i++) {
           document.write(`
-            <div class="relative group cursor-pointer overflow-hidden rounded shadow-lg">
-              <img src="../images/${i}.jpg" alt="Photo ${i}" class="w-full h-64 object-cover transform group-hover:scale-105 transition duration-300" onclick="openLightbox(${i})" />
-              <div class="absolute inset-0 bg-black bg-opacity-30 opacity-0 group-hover:opacity-100 transition flex items-center justify-center">
-                <p class="text-white text-sm">Click to view</p>
-              </div>
-            </div>
+            <img src="../images/${i}.jpg" alt="Image ${i}" class="rounded shadow cursor-pointer hover:scale-105 transition" onclick="openLightbox(${i})">
           `);
         }
       </script>
-      <!-- Image Block End -->
     </div>
+  </div>
+
+  <div id="lightbox" class="lightbox">
+    <span class="lightbox-btn lightbox-close" onclick="closeLightbox()">&times;</span>
+    <span class="lightbox-btn lightbox-prev" onclick="prevImage()">&#10094;</span>
+    <img id="lightbox-img" src="" alt="Preview">
+    <span class="lightbox-btn lightbox-next" onclick="nextImage()">&#10095;</span>
+    <a id="downloadBtn" class="lightbox-btn lightbox-download" download>Download</a>
   </div>
 
   <div class="watermark">© Keval Kotadia</div>
 
-  <!-- Lightbox HTML -->
-  <div id="lightbox" class="hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-50">
-    <button onclick="closeLightbox()" class="absolute top-4 right-6 text-white text-4xl">&times;</button>
-    <button onclick="prevImage()" class="absolute left-4 text-white text-3xl">&#8592;</button>
-    <img id="lightboxImage" class="max-h-[90%] max-w-[90%] object-contain shadow-2xl rounded" src="" alt="Gallery Image" />
-    <a id="downloadBtn" download class="absolute bottom-10 left-1/2 transform -translate-x-1/2 bg-white text-black px-4 py-2 rounded hover:bg-gray-300 shadow-md">Download</a>
-    <button onclick="nextImage()" class="absolute right-4 text-white text-3xl">&#8594;</button>
-  </div>
-
-  <!-- Scroll to top -->
-  <button onclick="scrollToTop()" class="fixed bottom-6 right-6 bg-black bg-opacity-60 text-white px-3 py-2 rounded-full shadow hover:bg-opacity-90">
-    &uarr;
-  </button>
-
-  <!-- Scripts -->
   <script>
     let currentIndex = 1;
 
     function openLightbox(index) {
       currentIndex = index;
+      document.getElementById('lightbox').style.display = 'flex';
       updateLightbox();
-      document.getElementById('lightbox').classList.remove('hidden');
     }
 
     function closeLightbox() {
-      document.getElementById('lightbox').classList.add('hidden');
+      document.getElementById('lightbox').style.display = 'none';
     }
 
     function nextImage() {
@@ -106,22 +118,16 @@
     }
 
     function updateLightbox() {
-      const imgPath = `../images/${currentIndex}.jpg`;
-      document.getElementById('lightboxImage').src = imgPath;
-      document.getElementById('downloadBtn').href = imgPath;
+      const imgSrc = `../images/${currentIndex}.jpg`;
+      document.getElementById('lightbox-img').src = imgSrc;
+      document.getElementById('downloadBtn').href = imgSrc;
     }
 
-    function scrollToTop() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-
-    // Keyboard control
-    document.addEventListener('keydown', function(event) {
-      const open = !document.getElementById('lightbox').classList.contains('hidden');
-      if (open) {
-        if (event.key === 'ArrowRight') nextImage();
-        if (event.key === 'ArrowLeft') prevImage();
-        if (event.key === 'Escape') closeLightbox();
+    document.addEventListener('keydown', (e) => {
+      if (document.getElementById('lightbox').style.display === 'flex') {
+        if (e.key === 'ArrowLeft') prevImage();
+        if (e.key === 'ArrowRight') nextImage();
+        if (e.key === 'Escape') closeLightbox();
       }
     });
   </script>
