--- a/index.html
+++ b/index.html
@@ -2,128 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Keval Photography</title>
-  <link rel="icon" href="images/favicon.png" type="image/png"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Keval Kotadia | Home</title>
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body, html {
-      height: 100%;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      scroll-behavior: smooth;
-    }
-
     body {
       background: url('images/background.jpg') no-repeat center center fixed;
       background-size: cover;
+      font-family: 'Segoe UI', sans-serif;
+      scroll-behavior: smooth;
     }
-
     .overlay {
-      background: rgba(0, 0, 0, 0.6);
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
+      background-color: rgba(0, 0, 0, 0.7);
+      min-height: 100vh;
     }
-
-    .content {
-      position: relative;
-      z-index: 2;
-      height: 100%;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 20px;
+    .fade-in {
+      animation: fadeIn 1.5s ease-in-out;
     }
-
-    .content h1 {
-      font-size: 3.5rem;
-      margin-bottom: 1rem;
-      text-shadow: 2px 2px 10px black;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-
-    .buttons {
-      margin-top: 2rem;
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .btn {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: rgba(255, 255, 255, 0.1);
-      color: white;
-      border: 2px solid white;
-      border-radius: 30px;
-      text-decoration: none;
-      transition: all 0.3s ease;
-    }
-
-    .btn:hover {
-      background-color: white;
-      color: black;
-    }
-
-    #scrollToTop {
+    .watermark {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 999;
-      background-color: rgba(255,255,255,0.1);
-      border: 2px solid white;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 50%;
-      font-size: 18px;
-      cursor: pointer;
-      display: none;
-      transition: all 0.3s ease;
-    }
-
-    #scrollToTop:hover {
-      background-color: white;
-      color: black;
+      bottom: 10px;
+      left: 10px;
+      color: rgba(255,255,255,0.3);
+      font-size: 14px;
+      z-index: 50;
     }
   </style>
 </head>
 <body>
-  <div class="overlay"></div>
-  <div class="content">
-    <h1>Keval's Photography</h1>
-    <div class="buttons">
-      <a href="/gallery/" class="btn">View Gallery</a>
-      <a href="https://www.instagram.com/keval.kotadia" class="btn" target="_blank">Follow on Instagram</a>
+  <div class="overlay text-white flex flex-col items-center justify-center min-h-screen px-4">
+    <h1 class="text-5xl font-bold mb-4 fade-in text-center">Keval Kotadia</h1>
+    <p class="text-xl mb-8 fade-in text-center">Nature & Wildlife Photographer</p>
+    <div class="flex gap-6 fade-in">
+      <a href="gallery/" class="bg-white text-black px-6 py-3 rounded shadow hover:bg-gray-200 transition">View Gallery</a>
+      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" class="bg-pink-600 text-white px-6 py-3 rounded shadow hover:bg-pink-500 transition">Follow on Instagram</a>
     </div>
   </div>
-
-  <button id="scrollToTop" onclick="scrollToTop()">↑</button>
-
-  <script>
-    const scrollBtn = document.getElementById("scrollToTop");
-
-    window.onscroll = function() {
-      if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
-        scrollBtn.style.display = "block";
-      } else {
-        scrollBtn.style.display = "none";
-      }
-    };
-
-    function scrollToTop() {
-      window.scrollTo({ top: 0, behavior: "smooth" });
-    }
-  </script>
+  <div class="watermark">© Keval Kotadia</div>
 </body>
 </html>
